# mindustry.compiler

./: .gitignore  CMakeLists.txt  README.md  array.c  array.h  assemble.bat  ast.h  cg.c  freevar.h  fwd.h  incpaths.txt  lex.c  lexstate.h  main.c  main.mk  parse.c  parsestate.h  pool.c  pool.h  symbol.h  test.mlog  test.result.mlog  tok.h  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cli/: cpp.c  main.c
cmake/: FindBinaryen.cmake  FindPandoc.cmake  wasm.cmake  windows-clang.cmake
cmake/Platform/: Webassembly.cmake
cmake/nuget/: Binaryen-x64-windows.nuspec  packages.proj
docs/: extensions.md
examples/: build.c  enums.c  fibonacci.c  flare-circle.c  flare-hauler.c  fortress.c  healfortress.c  hello-world.c  help.c  mindustry.h  novaflare.c  parsenum.c  relations.c  spaceport.c  spaceport2.c  stringmanip.c  switch.c  test.c  va-example.c
lib/: array.c  array.h  ast.c  ast.h  autoheap.c  autoheap.h  be.c  be.h  cg.c  cg.h  checker.c  checker.h  compilermacros.h  constant.h  elaborator.c  elaborator.h  errors.h  fe.c  fe.h  fwd.h  hash.c  hash.h  interval.c  interval.h  lex.c  lexstate.h  litsuffix.h  mp.c  mp.h  parse.c  parse.h  parse_macros.h  parselines.c  parselines.h  parser_globals.c  path.c  path.h  pool.c  pool.h  poolset.c  (+31 more)
selfbuild/: .gitignore  Makefile  Makefile.impl  Makefile.linux  stage1-toolchain.cmake  stage3-toolchain.cmake
targets/web/: cache.manifest.in  index.html  index.js  nginx.conf  run-nginx.sh  server.py
targets/webcontainer/: Dockerfile
tests/: test1.c  test_interval.c  unittest.c  unittest.h
tests/fail/: array_init.c  array_init.c.txt  const.c  const.c.txt  const_arrow.c  const_arrow.c.txt  prove.c  rvalue.c  rvalue.c.txt  union_init.c  union_init.c.txt
tests/pass/: aggregates.c  aggregates.c.ast  be_add.c  be_add.c.tac  be_arithmetic.c  be_arithmetic.c.s  be_arithmetic.c.tac  be_bitmath.c  be_bitmath.c.s  be_constprop.c  be_constprop.c.s  be_constprop.c.tac  be_conversions.c  be_conversions.c.s  be_fnstatic.c  be_fnstatic.c.s  be_got.c  be_got.c.s  be_got.c.tac  be_init.c  be_init.c.ast  be_init.c.s  be_init.c.tac  be_mem_ret.c  be_mem_ret.c.s  be_nested_array.c  be_nested_array.c.ast  be_nested_array.c.s  be_nested_array.c.sdata  be_nested_array.c.tac  be_relations.c  be_relations.c.s  be_simple2.c  be_simple2.c.s  be_simple2.c.tac  be_static_init.c  be_static_init.c.ast  be_static_init.c.s  be_static_init.c.sdata  be_va_args.c  (+63 more)
tests/pass/inc/: include_next.h
wasm/: wasmmain.c
wasm/crt/: new.cpp  new.h  stdarg.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  type_traits.h  utility.h
wasm/ffi/: Exports.h  Imports.h  exports.c  symbols.txt
windows/: fmemopen.c  stdio.h
